# flim-analysis

./: .gitignore  FLIMageFileReader.py  Figure4Csample.xlsx  NP5XXMCamui100uMDopa010_channelwise_empirical_taus.npy  NP5XXMCamui100uMDopa010_empirical_taus.xlsx  NP5XXMCamui100uMDopa010_rois.npz  NP5XXMCamui100uMDopa010_time.npy  README.md  exponentials.py  flim_files.py  flim_gui.py  main.py  pyproject.toml  testing.xlsx
crickflim/: FLIMageFileReader.py  exponentials.py  flim_files.py  flim_gui.py  main.py  roi.py
crickflim/sct/: utils.py
crickflim/sct/exponentials/: loss_functions.py  multi_exponential.py  param_tuple.py
crickflim/sct/napari/: flim_widget.py  napari_gui.py
notebooks/: NP5XXMCamui100uMDopa009.flim  example.ipynb
